FIXED ABOUT PAGE ON MOBILE

--- a/src/pages/style/Homestyle.css
+++ b/src/pages/style/Homestyle.css
@@ -128,7 +128,7 @@ body {
 
 @media (max-width: 600px) {
     .page {
-        padding: 3rem;
+        padding: 2rem;
     }
 
     .bxsci{
